Update to lwjgl3ify 2.0.0